# ComfyUI-JILIGULU-Nano-Banana

./: .comfyignore  .gitignore  PUBLISHING.md  README.en.md  README.md  __init__.py  nano_banana_node.py  pyproject.toml
examples/: README.md
examples/single-reference/: workflow.json
examples/text-to-image/: workflow.json
